reworked code for even listeners, cleaned up css

--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors by Meredith</title>
-    <script src="rock-paper-scissors.js" defer></script>
+    <script src="rps-revisited.js" defer></script>
+    <link rel="stylesheet" href="rps.css" />
 </head>
 <body>
    
-</body>
-</html>
+   <button type="button" class="choices" id="Rock"> ROCK </button>
 
+   <button type="button" class="choices" id="Paper"> PAPER </button>
+
+   <button type="button" class="choices" id="Scissors"> SCISSORS </button>
+
+   <div id="results">
+
+   </div>
+
+   <div id="score">
+
+   </div>
 </body>
 </html>
